<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Just Tweet</string>
    <string name="login_label">Connect with Twitter</string>
    <string name="title_activity_timeline">Home</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Tweet Item -->
    <string name="tweet_screenname">"@wilw"</string>
    <string name="tweet_name">Wil Wheaton</string>
    <string name="tweet_body">Missed the East Coast showing of @wilwproject because I was writing @CAH cards with the brilliant Cards Against Humanity tean. TO THE DVR!</string>
    <string name="tweet_media_description">Image embedded inside tweet</string>


    <!-- Timeline Action Bar -->
    <string name="compose">compose</string>
    <string name="title_activity_compose">""</string>
    <string name="menu_send_tweet">TWEET</string>

    <!-- Compose -->
    <string name="compose_name">Nathan</string>
    <string name="compose_screenname">"@nathan_miso"</string>
    <string name="compose_image_description">User\'s Image</string>
    <string name="compose_hint">What\'s happening?</string>
    <string name="char_count">0/140</string>

</resources>