<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.codepath.apps.simpletwitterclient.activities.ComposeActivity">


    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/ivComposeUser"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/compose_image_description"
        android:background="@color/twitter_blue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compose_name"
        android:id="@+id/tvComposeName"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ivComposeUser"
        android:layout_toEndOf="@+id/ivComposeUser" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compose_screenname"
        android:id="@+id/tvComposeScreenName"
        android:textSize="12sp"
        android:layout_below="@+id/tvComposeName"
        android:layout_toRightOf="@+id/ivComposeUser"
        android:layout_toEndOf="@+id/ivComposeUser" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etCompose"
        android:layout_below="@+id/ivComposeUser"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:inputType="textMultiLine"
        android:hint="@string/compose_hint"
        android:gravity="top"
        android:background="@null"
        android:layout_marginTop="10dp"
        />

</RelativeLayout>
