<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/white"
    >

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/ivProfileImage"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#ff0092ff"
        android:layout_margin="10dp"
        />

    <!-- First Line - name, screen name, relative time-->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:id="@+id/rlUsername"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        >
        <!-- name -->
        <!-- <com.codepath.apps.simpletwitterclient.customviews.RobotoTextView -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tweet_name"
            android:id="@+id/tvName"
            android:layout_alignParentTop="true"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:textSize="14sp"
            android:textStyle="bold"
             />

        <!-- screenname -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tweet_screenname"
            android:id="@+id/tvUsername"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/tvName"
            android:layout_toEndOf="@+id/tvName"
            android:textSize="12sp"
             />

        <!-- Created At -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvCreatedAt"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="12sp"
            />

        </RelativeLayout>

    <!-- BODY -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tweet_body"
        android:id="@+id/tvBody"
        android:textSize="14sp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@+id/rlUsername"
        android:layout_alignLeft="@+id/rlUsername"
        android:layout_alignStart="@+id/rlUsername" />

    <!-- Media (Optional) -->
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="175dp"
        android:id="@+id/ivMediaImage"
        android:layout_below="@+id/tvBody"
        android:layout_marginBottom="10dp"
        android:src="@drawable/grill"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:layout_alignLeft="@id/tvBody"
        android:layout_alignStart="@id/tvBody"
        android:layout_alignRight="@id/tvBody"
        android:layout_alignEnd="@id/tvBody"
        android:contentDescription="@string/tweet_media_description"
        />
</RelativeLayout>